--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../src/bootstrap/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./../src/paint/styles.css">
+    <link rel="stylesheet" href="./src/bootstrap/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./src/paint/styles.css">
     <title>Art Gallery Website</title>
 </head>
 <body>
@@ -108,6 +108,6 @@
     </div>
 
 
-    <script src="./../src/bootstrap/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="./src/bootstrap/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 </body>
 </html>
