created the location page and the anchor tag to link the home page and the location page together

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
                         pieces inspire you? Visit us and find out.
                     </p>
 
-                    <button class="location btn btn-lg d-flex text-white p-0 border align-items-stretch justify-content-between text-uppercase">
+                    <a href="./location.html" target="_blank" class="location btn btn-lg d-flex text-white p-0 border align-items-stretch justify-content-between text-uppercase">
                         <span class="d-flex align-items-center justify-content-center">Our Location</span>
                         <span class="icon d-flex align-items-center justify-content-center">
                             <svg width="10" height="24" xmlns="http://www.w3.org/2000/svg"><path stroke="#FFF" fill="none" d="m1 0 8 12-8 12"/></svg>
                         </span>
-                    </button>
+                    </a>
                 </article>
             </div>
         </section>
